Añadiendo interactividad mediante eventos

--- a/index.html
+++ b/index.html
@@ -20,9 +20,16 @@
                 nuestros más de <span id="cantidadPeludos"></span>
             </h3>
             <div class="row my-5 peludosEnAdopcion">
-                <!-- Tarjetas generadas dinamicamente en el DOM -->
+                <h4 class="text-center">¿Qué te gustaría adoptar?</h4>
+                <div class="btn-group btn-group-lg my-3" role="group" aria-label="...">
+                    <div href="" class="btn-lg btn btn-primary" id="verPerros">Ver perros</div>
+                    <div href="" class="btn-lg btn btn-primary" id="verGatos">Ver gatos</div>
+                </div>
+                <!-- Tarjetas generadas dinamicamente en el DOM desde main.js -->
             </div>
         </div>
+
+        <!-- Funcionalidad pendiente
         <div class="container">
             <h2>Peludos que ya encontraron un hogar</h2>
             <h3>Desde <b>2015</b> unimos a más de <strong>300</strong> Peludos con sus nuevas familias.</h3>
@@ -76,7 +83,7 @@
                 </a>
             </div>
 
-        </div>
+        </div> -->
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
