--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <div class="container my-5 p-5 rounded">
+    <div class="container my-5 p-5 rounded text-center">
         <h1 class="my-5">Bienvenido a Refugio Peludo!</h1>
         <div class="container">
             <h2>Adoptá un Peludo</h2>
@@ -21,7 +21,7 @@
                 nuestros más de <span id="cantidadPeludos"></span>
             </h3>
             <div class="row my-5 peludosEnAdopcion">
-                <h3 class="text-center">¿Qué te gustaría adoptar?</h3>
+                <h3 class="mt-3">¿Qué te gustaría adoptar?</h3>
                 <div class="btn-group btn-group-lg my-3" role="group" aria-label="...">
                     <div href="" class="btn-lg btn btn-primary" id="verPerros">Ver perros</div>
                     <div href="" class="btn-lg btn btn-primary" id="verGatos">Ver gatos</div>
