--- a/index.html
+++ b/index.html
@@ -5,92 +5,86 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./styles.css">
-    <title>Refugio Peludo</title>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&family=Fredoka+One&family=Nunito:wght@400;700&display=swap"
+        rel="stylesheet">
+    <!-- Estilos propios  -->
+    <link rel="stylesheet" href="./css/styles.css">
+    <title>Refugio Peludo - Inicio</title>
 </head>
 
 <body>
 
-    <div class="container my-5 p-5 rounded text-center">
-        <h1 class="my-5">Bienvenido a Refugio Peludo!</h1>
-        <div class="container">
-            <h2>Adoptá un Peludo</h2>
-            <h3>Dejá entrar a tu vida a tu nuevo mejor amigo. Solo necesitás un corazón abierto y elegir a alguno de
-                nuestros más de <span id="cantidadPeludos"></span>
-            </h3>
-            <div class="row my-5 peludosEnAdopcion">
-                <h3 class="mt-3">¿Qué te gustaría adoptar?</h3>
-                <div class="btn-group btn-group-lg my-3" role="group" aria-label="...">
-                    <div href="" class="btn-lg btn btn-primary" id="verPerros">Ver perros</div>
-                    <div href="" class="btn-lg btn btn-primary" id="verGatos">Ver gatos</div>
-                </div>
-                <!-- Tarjetas generadas dinamicamente en el DOM desde main.js -->
-            </div>
-        </div>
+    <header>
+        <nav class="px-5 py-3 navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
 
-        <!-- Funcionalidad pendiente
-        <div class="container">
-            <h2>Peludos que ya encontraron un hogar</h2>
-            <h3>Desde <b>2015</b> unimos a más de <strong>300</strong> Peludos con sus nuevas familias.</h3>
-            <div class="row my-5" id="enAdopcion">
-                <div class="col-12 col-md-6  col-lg-3">
-                    <div class="card my-3" style="width: 18rem;">
-                        <img src="./img/dogejpg.webp" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Fatiga</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                        </div>
+                <a class="navbar-brand" href="./index.html">
+                    <div class="d-flex align-items-center">
+                        <img src="./img/Recurso 1.png" alt="logo" width="100"
+                            class="d-inline-block align-text-top me-3">
+                        <h2 class="headerTitle">Refugio <br>Peludo</h2>
                     </div>
-                </div>
-                <div class="col-12 col-md-6  col-lg-3">
-                    <div class="card my-3" style="width: 18rem;">
-                        <img src="./img/dogejpg.webp" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Betun</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6  col-lg-3">
-                    <div class="card my-3" style="width: 18rem;">
-                        <img src="./img/dogejpg.webp" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Salem</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6  col-lg-3">
-                    <div class="card my-3" style="width: 18rem;">
-                        <img src="./img/dogejpg.webp" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Filipo</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                        </div>
+                </a>
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link px-3 active" aria-current="page" href="./index.html"> <span
+                                class="menuItem">Home</span></a>
+                        <a class="nav-link px-3" href="./pages/adoptar.html"> <span class="menuItem">Adoptar</span></a>
+                        <a class="nav-link px-3" href="./pages/dar-en-adopcion.html"> <span class="menuItem">Dar en
+                                adopción</span></a>
+                        <a class="nav-link px-3" href="./pages/usuario.html"> <span class="menuItem">Mi
+                                información</span></a>
                     </div>
                 </div>
             </div>
+        </nav>
+    </header>
 
-
-            <div class="text-center">
-                <a href="#" class="d-block">
-                    <div class="btn btn-primary btn-lg">Dar un Peludo en adopción</div>
+    <main>
+        <section class="heroIndex">
+            <div class="container text-center h-100 d-flex flex-column justify-content-center">
+                <h1>¡Bienvenido a Refugio Peludo!</h1>
+                <h2>Abrí tu corazón a nuestros más de
+                    <span id="cantidadPeludos">
+                        <!-- Numero dinamico generado en JS -->
+                    </span>
+                </h2>
+                <a href="./pages/adoptar.html">
+                    <div class="btn btn-lg mt-5 btn-primary botonLg">QUIERO ADOPTAR</div>
                 </a>
             </div>
+        </section>
+        <section class="procesoIndex">
+            <div class="container">
 
-        </div> -->
-    </div>
+
+
+            </div>
+        </section>
+        <section></section>
+    </main>
+
+    <footer>
+
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <script src="./main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
