--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Fontawesome -->
+    <script src="https://kit.fontawesome.com/043647ae19.js" crossorigin="anonymous"></script>
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -67,18 +69,73 @@
                 </a>
             </div>
         </section>
-        <section class="procesoIndex">
-            <div class="container">
-
-
-
+        <section class="procesoIndex py-5 my-5">
+            <div class="container py-5 text-center">
+                <h2 class="tituloSeccion mb-5"><span>El proceso</span></h2>
+                <div class="row">
+                    <div class="col-12 col-md-4 p-5">
+                        <i class="fa-solid fa-magnifying-glass iconoPasos"></i>
+                        <h3 class="tituloPasos">Encontrá</h3>
+                        <p class="mt-3 parrafoPasos">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam
+                            exercitationem,
+                            incidunt
+                            dolore voluptatibus officia consectetur numquam animi vel quo ipsam harum id amet, cumque
+                            quisquam nesciunt voluptas nemo dolor qui soluta! Vitae eaque mollitia vero quod commodi
+                            consectetur nostrum explicabo voluptas. Temporibus quas velit molestias iusto maiores ullam
+                            atque distinctio?</p>
+                    </div>
+                    <div class="col-12 col-md-4 p-5">
+                        <i class="fa-solid fa-paw iconoPasos"></i>
+                        <h3 class="tituloPasos">Conocé</h3>
+                        <p class="mt-3 parrafoPasos">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam
+                            exercitationem,
+                            incidunt
+                            dolore voluptatibus officia consectetur numquam animi vel quo ipsam harum id amet, cumque
+                            quisquam nesciunt voluptas nemo dolor qui soluta! Vitae eaque mollitia vero quod commodi
+                            consectetur nostrum explicabo voluptas. Temporibus quas velit molestias iusto maiores ullam
+                            atque distinctio?</p>
+                    </div>
+                    <div class="col-12 col-md-4 p-5">
+                        <i class="fa-solid fa-house-chimney iconoPasos"></i>
+                        <h3 class="tituloPasos">Adoptá</h3>
+                        <p class="mt-3 parrafoPasos">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam
+                            exercitationem,
+                            incidunt
+                            dolore voluptatibus officia consectetur numquam animi vel quo ipsam harum id amet, cumque
+                            quisquam nesciunt voluptas nemo dolor qui soluta! Vitae eaque mollitia vero quod commodi
+                            consectetur nostrum explicabo voluptas. Temporibus quas velit molestias iusto maiores ullam
+                            atque distinctio?</p>
+                    </div>
+                </div>
             </div>
         </section>
-        <section></section>
+
     </main>
 
-    <footer>
-
+    <footer class="text-center pt-5 pb-3">
+        <div class="contenedorLogo">
+            <img src="./img/Recurso 5.png" alt="logo footer">
+        </div>
+        <h3 class="my-3">DISCLAIMER</h3>
+        <p> Este sitio es un proyecto personal, como parte del curso de programación Javascript en Coderhouse. </p>
+        <p> Si eres es un reclutador, o si quieres utilizar este proyecto para tu organización de rescate animal
+            <strong> de forma gratuita</strong>, puedes contactarme <a href="mailto:hernan.gds22@gmail.com"
+                class="text-decoration-none footerLink">haciendo click aquí</a>
+        </p>
+        <ul class="list-unstyled d-flex justify-content-center socialIcons mt-5">
+            <li>
+                <a href="#" class="iconLink"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li>
+                <a href="#" class="iconLink"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="#" class="iconLink"><i class="fa-brands fa-whatsapp"></i></a>
+            </li>
+            <li>
+                <a href="#" class="iconLink"><i class="fa-solid fa-envelope"></i></a>
+            </li>
+        </ul>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
