agregando funcionalidad de login y logout

--- a/pages/dar-en-adopcion.html
+++ b/pages/dar-en-adopcion.html
@@ -18,7 +18,7 @@
         rel="stylesheet">
     <!-- Estilos propios  -->
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Refugio Peludo - Adoptar</title>
+    <title>Refugio Peludo - Dar en adopción</title>
 </head>
 
 <body>
