--- a/pages/usuario.html
+++ b/pages/usuario.html
@@ -18,7 +18,7 @@
         rel="stylesheet">
     <!-- Estilos propios  -->
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Refugio Peludo - Adoptar</title>
+    <title>Refugio Peludo - Mi información</title>
 </head>
 
 <body>
@@ -56,9 +56,56 @@
     </header>
 
     <main>
+        <div class="container text-center mt-3 pt-5">
+            <i class="fa-solid fa-user mb-3 iconoPasos"></i>
+            <h1 class="tituloSeccion mb-5"><span>Mi información</span></h1>
+        </div>
+        <div class="container my-5 py-5" id="contenedorUsuario">
+            <div id="registrarUsuario" class="d-none">
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <div class="h-100 d-flex flex-column justify-content-around">
+                            <p class="px-5 textoRegistro">Para involucrarte en un proceso de adopción, nuestro equipo
+                                necesitará contactarse contigo.
+                            </p>
+                            <p class="px-5 textoRegistro">
+                                Es por eso que te pedimos algunos datos básicos que se almacenarán en tu navegador para
+                                adopciones actuales y futuras.
+                            </p>
+                            <p class="px-5 textoRegistro">
+                                <strong>Puedes eliminarlos cuando quieras :)</strong>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 px-5">
+                        <form action="#" id="formularioRegistro" class="d-flex flex-column">
+                            <h3>Ingresa tus datos</h3>
+                            <label for="name" class="mt-3">Nombre</label>
+                            <input class='form-control' type="text" name="name" id="name">
+                            <label for="email" class="mt-3">Email</label>
+                            <input class='form-control' type="email" name="email" id="email">
+                            <label for="telefono" class="mt-3">Teléfono</label>
+                            <input class='form-control mb-3' type="tel" name="telefono" id="telefono">
+                            <p id="mensajeRegistro"></p>
+                            <div class="btn btn-lg btn-primary mt-3 botonGlobal" id="botonRegistro">Registrarse</div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div id="usuarioRegistrado" class="d-none text-center">
+                <div class="tarjetaContacto">
+                    <h2 id="tituloInfoContacto">Tu contacto para adopciones:</h2>
 
-        <div class="container text-center my-5 py-5">
-            <h1 class="my-5 py-5">En construcción</h1>
+                    <div class="d-flex mt-5 flex-column justify-content-around">
+                        <p><b>Lo usaremos solo si decides iniciar un proceso de adopción.</b></p>
+                        <p><b>Nombre: </b> <span id="datosNombre"> </span></p>
+                        <p><b>E-mail: </b> <span id="datosMail"> </span></p>
+                        <p><b>Teléfono: </b> <span id="datosTelefono"> </span></p>
+                        <div id="borradoExitoso" class="text-center"></div>
+                        <div class="btn btn-lg btn-primary mt-3 botonGlobal" id="eliminarUsuario">Borrar/cambiar</div>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </main>
