--- a/pages/adoptar.html
+++ b/pages/adoptar.html
@@ -56,22 +56,28 @@
     </header>
 
     <main>
+        <div class="container text-center mt-3 pt-5">
+            <i class="fa-solid fa-house mb-3 iconoPasos"></i>
+            <h1 class="tituloSeccion mb-5"><span>Adoptá un peludo</span></h1>
+        </div>
+        <div class="container my-5 p-5 rounded text-center contenedorAdopcion">
 
-        <div class="container my-5 p-5 rounded text-center">
-            <div class="container contenedorPrincipal rounded">
+            <h2>Dejá entrar a tu vida a tu nuevo mejor amigo. Solo necesitás un corazón abierto y elegir a
+                alguno de nuestros <span id="cantidadPeludos"></span></h2>
 
-                <h2>Adoptá un Peludo</h2>
-                <h3>Dejá entrar a tu vida a tu nuevo mejor amigo. Solo necesitás un corazón abierto y elegir a
-                    alguno denuestros más de <span id="cantidadPeludos"></span></h3>
-                <div class="row my-5 peludosEnAdopcion">
-                    <h3 class="mt-3">¿Qué te gustaría adoptar?</h3>
-                    <div class="btn-group btn-group-lg my-3" role="group" aria-label="...">
-                        <div href="" class="btn-lg btn btn-primary" id="verPerros">Ver perros</div>
-                        <div href="" class="btn-lg btn btn-primary" id="verGatos">Ver gatos</div>
+            <div class="row my-5 peludosEnAdopcion" id="peludosEnAdopcion">
+                <h3>¿Qué te gustaría adoptar?</h3>
+                <div class="d-flex my-5 justify-content-center" role="group" aria-label="...">
+                    <div class="botonFiltro btn d-flex flex-column justify-content-center mx-3" id="verPerros">
+                        <i class="fa-solid fa-dog iconoFiltro"></i>
+                        <h3 class="tituloFiltro">Perros</h3>
                     </div>
-                    <!-- Tarjetas generadas dinamicamente en el DOM desde main.js -->
+                    <div class="botonFiltro btn d-flex flex-column justify-content-center mx-3" id="verGatos">
+                        <i class="fa-solid fa-cat iconoFiltro"></i>
+                        <h3 class="tituloFiltro">Gatos</h3>
+                    </div>
                 </div>
-
+                <!-- Tarjetas generadas dinamicamente en el DOM desde main.js -->
             </div>
 
 
