--- a/pages/adoptar.html
+++ b/pages/adoptar.html
@@ -65,9 +65,9 @@
             <h2>Dejá entrar a tu vida a tu nuevo mejor amigo. Solo necesitás un corazón abierto y elegir a
                 alguno de nuestros <span id="cantidadPeludos"></span></h2>
 
-            <div class="row my-5 peludosEnAdopcion" id="peludosEnAdopcion">
-                <h3>¿Qué te gustaría adoptar?</h3>
-                <div class="d-flex my-5 justify-content-center" role="group" aria-label="...">
+            <div class="row mt-5 peludosEnAdopcion" id="peludosEnAdopcion">
+                <h3 class="mb-5">¿Qué te gustaría adoptar?</h3>
+                <div class="d-flex justify-content-center">
                     <div class="botonFiltro btn d-flex flex-column justify-content-center mx-3" id="verPerros">
                         <i class="fa-solid fa-dog iconoFiltro"></i>
                         <h3 class="tituloFiltro">Perros</h3>
