Usando fetch con archivo JSON

--- a/index.html
+++ b/index.html
@@ -109,6 +109,15 @@
                 </div>
             </div>
         </section>
+        <section class="procesoIndex pb-5 mb-5">
+            <div class="container py-5 text-center">
+                <h2 class="tituloSeccion mb-5"><span>Historias con final feliz</span></h2>
+                <h3>Conocé a los Peludos que ya encontraron su hogar</h3>
+                <div class="row" id="nodoAdoptados">
+
+                </div>
+            </div>
+        </section>
 
     </main>
 
@@ -142,6 +151,9 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
     <script src="./js/main.js"></script>
+    <script src="./js/adoptados.js"></script>
+
+
 </body>
 
 </html>
