añadiendo tarjetas traidas desde el fetch de JSON

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="container py-5 text-center">
                 <h2 class="tituloSeccion mb-5"><span>Historias con final feliz</span></h2>
                 <h3>Conocé a los Peludos que ya encontraron su hogar</h3>
-                <div class="row" id="nodoAdoptados">
+                <div id="seccionAdoptados">
 
                 </div>
             </div>
