--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </a>
             </div>
         </section>
-        <section class="procesoIndex py-5 my-5">
+        <section class="procesoIndex pt-5 mt-5">
             <div class="container py-5 text-center">
                 <h2 class="tituloSeccion mb-5"><span>El proceso</span></h2>
                 <div class="row">
@@ -110,9 +110,9 @@
             </div>
         </section>
         <section class="procesoIndex pb-5 mb-5">
-            <div class="container py-5 text-center">
+            <div class="container pb-5 text-center">
                 <h2 class="tituloSeccion mb-5"><span>Historias con final feliz</span></h2>
-                <h3>Conocé a los Peludos que ya encontraron su hogar</h3>
+                <h3 class="mb-5">Conocé a los Peludos que ya encontraron su hogar</h3>
                 <div id="seccionAdoptados">
 
                 </div>
